--- a/teste 1/nbproject/project.properties
+++ b/teste 1/nbproject/project.properties
@@ -33,9 +33,29 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/teste_1
 excludes=
+file.reference.gnujaxp.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\gnujaxp.jar
+file.reference.iText-2.1.5.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\iText-2.1.5.jar
+file.reference.jcommon-1.0.17.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\jcommon-1.0.17.jar
+file.reference.jfreechart-1.0.14-experimental.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\jfreechart-1.0.14-experimental.jar
+file.reference.jfreechart-1.0.14-swt.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\jfreechart-1.0.14-swt.jar
+file.reference.jfreechart-1.0.14.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\jfreechart-1.0.14.jar
+file.reference.jfreechart-1.5.2.zip=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.5.2.zip
+file.reference.junit.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\junit.jar
+file.reference.servlet.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\servlet.jar
+file.reference.swtgraphics2d.jar=C:\\Users\\lucia\\Desktop\\trabalho comunic\\programas\\grafico\\jfreechart-1.0.14\\lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jfreechart-1.5.2.zip}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.iText-2.1.5.jar}:\
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${file.reference.jfreechart-1.0.14-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.14-swt.jar}:\
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
