--- a/teste 2/nbproject/project.properties
+++ b/teste 2/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Mon Jul 12 22:42:49 BRT 2021
+#Wed Jul 14 13:44:22 BRT 2021
 run.classpath=${javac.classpath}\:${build.classes.dir}
 javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.hamcrest.classpath}\:${libs.junit_4.classpath}
 excludes=
@@ -18,7 +18,7 @@ file.reference.jfreechart-1.0.14-swt.jar=../grafico/jfreechart-1.0.14/lib/jfreec
 javadoc.private=false
 javadoc.author=false
 endorsed.classpath=
-main.class=teste.pkg2.Teste2
+main.class=teste.pkg2.InterfaceGrafica
 junit.selected.version=3
 file.reference.jcommon-1.0.17.jar=../grafico/jfreechart-1.0.14/lib/jcommon-1.0.17.jar
 source.encoding=UTF-8
